--- a/website/style.css
+++ b/website/style.css
@@ -140,6 +140,7 @@
     gap: 10px;
     cursor: pointer;
     margin-bottom: 10px;
+    overflow-wrap: break-word;
   }
   
   .contact-item .icon {
